--- a/AccordApp/AccordApp.csproj
+++ b/AccordApp/AccordApp.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="4.5.3.2" />
-    <PackageReference Include="Microsoft.ML" Version="1.3.1" />
-    <PackageReference Include="Microsoft.ML.Mkl.Components" Version="1.3.1" />
+    <PackageReference Include="Accord" Version="3.8.0" />
+    <PackageReference Include="Accord.MachineLearning" Version="3.8.0" />
+    <PackageReference Include="Accord.Statistics" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
